Revert back container width, fix controls align

--- a/internal_packages/preferences/stylesheets/preferences.less
+++ b/internal_packages/preferences/stylesheets/preferences.less
@@ -47,7 +47,7 @@ body.platform-darwin {
 .preferences-wrap {
   input[type=checkbox] {margin: 0 7px 0 0; position: relative; top: -1px; }
   input[type=radio] {margin: 0 7px 0 0; position: relative; top: -1px; }
-  select { margin:10px; margin-top:4px; }
+  select { margin: 4px 0 0 8px; }
 
   padding-bottom:50px;
 
@@ -152,9 +152,9 @@ body.platform-darwin {
   }
 
   .container-notifications {
-      width: 80%;
-      margin-left: 10%;
-      margin-right: 10%;
+      width: 75%;
+      margin-left: auto;
+      margin-right: auto;
   }
 
   .container-appearance {
